Issue #5 - Changed the page width and alignment to center

--- a/public/static/css/main.css
+++ b/public/static/css/main.css
@@ -1,6 +1,9 @@
 * {
+  position: relative;
   margin: 0px;
   padding: 0px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 html, body {
@@ -8,9 +11,8 @@ html, body {
 }
 
 #headercontainer {
-  width: 100%;
+  width: 1000px;
   min-height: 100%;
-  position: relative;
   overflow: hidden;
 }
 
@@ -47,7 +49,7 @@ html, body {
 
 #socialnav li {
   display: inline-block;
-  margin: 0px 0px 0px 10px;
+  margin: 0px 0px 0px 3px;
 }
 
 #navmenu ul {
@@ -75,9 +77,9 @@ html, body {
 }
 
 #navmenu > ul > li {
+  position: relative;
   float: left;
   margin-left: 15px;
-  position: relative;
 }
 
 #navmenu > ul > li > a {
@@ -93,7 +95,7 @@ html, body {
 }
 
 #navmenu > ul > li > a:hover {
-  color: #ffffff;
+  color: #FF0000;
 }
 
 #content {
@@ -126,24 +128,29 @@ html, body {
   text-decoration: none;
 }
 
+#footer > ul > li > a:hover {
+  color: #FF0000;
+}
+
 #footer ul.navigationbottom {
   position: absolute;
   left: 15px;
   margin: 10px;
-  font-size: 15px;
+  font-size: 14px;
   font-family: Verdana, 'Lucida Grande';
   color: #a0a0a0;
 }
 
 #footer ul.bottomcontent {
-  text-align: center;
+  position: absolute;
+  right: 10px;
   margin: 10px;
-  font-size: 15px;
+  font-size: 13px;
   font-family: Verdana, 'Lucida Grande';
   color: #a0a0a0;
 }
 
 #footer ul.navigationbottom li + li::before {
   content: "/";
-  padding: 10px;
+  padding: 5px;
 }
